Fixed spacing and alignment of blog title

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,85 @@
 
 body {
     background: red;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 12.212%;
+    padding-right: 12.212%;
 }
 
 header, main, footer {
     background: white;
+}
+
+
+/**
+        HEADER
+**/
+header {
+    display: block;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+
+
+header nav {
+    
+}
+
+header nav div:first-child {
+    float: left;
+}
+
+#masthead img {
+    float: left;
+}
+
+header nav div:last-child {
+    float: right;
+}
+
+header nav div:nth-child(2) {
+    float: right;
+}
+
+header nav ul li{
+    display: inline-block;
+}
+
+
+/**
+        MAIN CONTENT
+**/
+
+main {
+    padding-top: 5%;
+}
+
+main section {
+    border-top: 15px solid black;
+    padding-top: 7%;
+}
+
+main section h3 {
+    display: inline-block;
+}
+main section div:nth-child(2) h4 {
+    float: left;
+}
+
+#print {
+    float: right;
+}
+
+#print img {
+    border: 1px solid black;
+    float: left;
+}
+
+#print p {
+    border: 1px solid black;
+    float: right;
+}
+
+main figure {
+    padding-top: 5%;
 }
